<resources>
    <string name="app_name">LLR Test Practice</string>

    <string name="learn_heading">Read/Practice:</string>
    <string name="learn_details">Details</string>

    <string name="test_heading">Test:</string>
    <string name="test_details">20 questions in 10 minutes\nPass score: 12</string>

    <string name="test_old">View/Continue previous test</string>
    <string name="test_new">New test</string>

    <string name="test_old_unfinished_details">Test in progress:\nAttempted: %1$d\nTime remaining: %2$d:%3$02d</string>

    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_check">Check</string>
    <string name="button_finish">Finish</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>

    <string name="menu_item_read_mode">Read mode</string>
    <string name="menu_item_practice_mode">Practice mode</string>

    <string name="heading_test_in_progress">Test in progress</string>
    <string name="heading_test_finished">Test finished</string>
    <string name="heading_num_questions">(%1$d questions)</string>
    <string name="heading_score">(Score: %1$d/%2$d)</string>
    <string name="time_remaining" translatable="false">%1$d:%2$02d</string>

    <string name="setting_language_for_questions">Language for questions:</string>

    <string-array name="available_languages">
        <item>English</item>
        <item>हिन्दी</item>
        <item>తెలుగు</item>
    </string-array>
    <string-array name="available_languages_as_codes">
        <item>en</item>
        <item>hi</item>
        <item>te</item>
    </string-array>

    <string name="setting_theme">Theme:</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_follow_system">Follow system</string>

    <string name="setting_question_traversal_heading">Question traversal:</string>
    <string name="setting_question_traversal_use_buttons">Use buttons Previous &amp; Next</string>
    <string name="setting_question_traversal_use_swipe">Use swipe gesture</string>

    <string name="setting_practice_mode_validation_trigger_heading">Practice mode choice validation:</string>
    <string name="setting_practice_mode_validation_trigger_use_check_button">Use Check Button</string>
    <string name="setting_practice_mode_validation_trigger_choosing_an_option">Auto validate on choice selection</string>

    <string name="button_restore_defaults">Restore Defaults</string>

    <string name="info_textView"><a href="">[info]</a></string>

    <string name="alert_message_are_you_sure">Are you sure?</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>

    <string name="setting_toast_for_traversal_force_at_least_one">At least one of these needs to be set.\nSo, the other is set.</string>

</resources>
